2014-07-19  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Unreviewed GTK gardening.

        * platform/gtk/TestExpectations: Report and mark new failures. Update some expectations.

2014-07-18  Simon Fraser  <simon.fraser@apple.com>

        [iOS WK2] position:fixed in iframes with programmatic scroll could end up in the wrong place
        https://bugs.webkit.org/show_bug.cgi?id=135078

        Reviewed by Tim Horton.
        
        Test with position:fixed inside an iframe that scrolls programmatically.

        * platform/mac-wk2/tiled-drawing/scrolling/frames/fixed-inside-frame-expected.txt: Added.
        * platform/mac-wk2/tiled-drawing/scrolling/frames/fixed-inside-frame.html: Added.
        * platform/mac-wk2/tiled-drawing/scrolling/frames/resources/autoscrolling-frame-with-fixed.html: Added.

2014-07-18  Alexey Proskuryakov  <ap@apple.com>

        media/video-seek-with-negative-playback.html is flaky on Mac
        https://bugs.webkit.org/show_bug.cgi?id=135071

        * platform/mac/TestExpectations: Marked it as such.

2014-07-18  Zalan Bujtas  <zalan@apple.com>

        Add timeout for transition end. Speculative layout test fix.

        * fast/layers/no-clipping-overflow-hidden-added-after-transform.html:

2014-07-18  Mario Sanchez Prada  <mario.prada@samsung.com>

        [GTK] Unreviewed gardening. Removing failure expectations for tests now passing.

        * platform/gtk/TestExpectations: Removed failure expectations.

2014-07-18  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r171218.
        https://bugs.webkit.org/show_bug.cgi?id=135055

        Made fast/dom/HTMLObjectElement/beforeload-set-text-
        crash.xhtml crash (Requested by ap on #webkit).

        Reverted changeset:

        "REGRESSION (r169105): Crash in selection"
        https://bugs.webkit.org/show_bug.cgi?id=134303
        http://trac.webkit.org/changeset/171218

2014-07-18  Mario Sanchez Prada  <mario.prada@samsung.com>
